--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   avatar           : "/assets/images/profile_photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "A meaningful day at a time"
   location         : "New York"
-  email            : sungminro1992@gmail.com
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
