--- a/_config.yml
+++ b/_config.yml
@@ -106,16 +106,16 @@ author:
   avatar           : "/assets/images/profile_photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "A meaningful day at a time"
   location         : "New York"
-  email            : 
+  email            : "sungminro92@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:sungminro1992@gmail.com"
     - label: "Website"
-      icon: "fas fa-fw fa-link"
+      # icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      # icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
