--- a/_config.yml
+++ b/_config.yml
@@ -218,7 +218,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
@@ -282,12 +282,11 @@ defaults:
       path: ""
       type: posts
     values:
-      show_date: true
-      read_time: true
+      # show_date: true
       date_format: "%B %-d, %Y"
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: false # true
       share: true
       related: true
