--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,12 @@
 # main links
 main:
-#   - title: "Quick-Start Guide"
-#     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "About"
-    url: /about/
-  - title: "Blogs"
-    url: /blogs/
-  - title: "Projects"
-    url: /projects/
-  - title: "Code"
-    url: /learning-code/
-  - title: "CV"
-  url: /resume/
+  - title: "Quick-Start Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
