--- a/_config.yml
+++ b/_config.yml
@@ -284,3 +284,11 @@ defaults:
       comments: true
       share: true
       related: true
+   # _portfolio
+  - scope:
+      path: "/projects"
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share: true
