--- a/_config.yml
+++ b/_config.yml
@@ -271,6 +271,11 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+  
 
 defaults:
   # _posts
@@ -283,12 +288,19 @@ defaults:
       read_time: true
       comments: true
       share: true
-      related: true
    # _portfolio
   - scope:
-      path: "/projects"
-      type: projects
+      path: "/portfolio"
+      type: portfolio
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       share: true
+  # _posts
+  - scope:
+      path: "/posts"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      share: true  
