project three updated

--- a/_config.yml
+++ b/_config.yml
@@ -272,10 +272,9 @@ compress_html:
     envs: development
 
 collections:
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
-  
   
 defaults:
   # _posts
@@ -290,7 +289,7 @@ defaults:
    # _portfolio
   - scope:
       path: ""
-      type: portfolio
+      type: projects
     values:
       layout: single
       share: true
