link-text color changed. all project files added
going on to editing single pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,7 @@ main:
   - title: "Projects"
     url: /projects/  
   - title: "Blogs"
-    url: /posts/
+    url: /blogs/
   - title: "TIL"
     url: /today-i-learned/
-  - title: "CV"
   #   url: /sitemap/
